manifestos/giropops-senhas-nodeport-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas-nodeport
  labels:
    app: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
  - port: 5000
    name: giropops-port
    targetPort: 5000
  externalIPs:
    - 3.94.130.71
    - 3.234.182.15
  type: NodePort
