manifestos/projeto-pick-ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls: 
  - hosts: 
    - projeto-pick.ibmenezes.com
    secretName: "projeto-pick-tls"
  rules:
  - host: projeto-pick.ibmenezes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: grafana-svc-bridge
            port:
              number: 3000
      - path: /prometheus-operator
        pathType: Prefix
        backend:
          service:
            name: prometheus-operator-svc-bridge
            port:
              number: 8443
      - path: /alertmanager-main
        pathType: Prefix
        backend:
          service:
            name: alertmanager-main-svc-bridge
            port:
              number: 9093
